--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,8 @@ section {
 }
 
 #header .logo img {
-	max-height: 100px;
+	max-height: 130px;
+	transition: all 0.2s linear;
 }
 
 /*--------------------------------------------------------------
@@ -431,7 +432,7 @@ section {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.35);
+	background-color: rgba(0, 0, 0, 0.65);
 	top: 0;
 	left: 0;
 }
@@ -579,6 +580,7 @@ button.btn-default span {
 button.btn-default span:hover {
 	color: #fff;
 	background-position: left bottom;
+	background-color: #000;
 }
 
 .enquire-btn {
@@ -782,6 +784,10 @@ textarea {
 	letter-spacing: 1px;
 }
 
+.toggle:hover {
+	background-color: #000;
+}
+
 /*************************************** SIDEBAR FORM CSS ************************************/
 
 /*************************************** overviewContent ************************************/
@@ -813,6 +819,21 @@ textarea {
 
 .gallerySlider .slick-slide.slick-center {
 	transform: scale(1);
+}
+
+.itemBox:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	transition: all 0.2s linear;
+}
+
+.gallerySlider .slick-slide.slick-center .itemBox:after {
+	opacity: 0;
 }
 
 .itemBoxContent {
