--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ section {
 
 #header.header-scrolled,
 #header.header-inner-pages {
-	background: rgba(40, 58, 90, 0.9);
+	background: rgb(255 255 255);
 }
 
 #header .logo {
@@ -165,6 +165,11 @@ section {
 
 #header .logo a {
 	color: #fff;
+}
+
+.header-scrolled .navbar a,
+.header-scrolled .navbar a:focus {
+	color: #000;
 }
 
 #header .logo img {
@@ -1026,3 +1031,5 @@ textarea {
 .stickyIcons a img {
 	width: 40px;
 }
+
+.broucheureButton a {}
