--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ section {
 #header.header-scrolled,
 #header.header-inner-pages {
 	background: rgb(255 255 255);
+	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6);
 }
 
 #header .logo {
@@ -165,11 +166,6 @@ section {
 
 #header .logo a {
 	color: #fff;
-}
-
-.header-scrolled .navbar a,
-.header-scrolled .navbar a:focus {
-	color: #000;
 }
 
 #header .logo img {
@@ -211,7 +207,7 @@ section {
 	padding: 10px 0 10px 30px;
 	font-size: 15px;
 	font-weight: 500;
-	color: #fff;
+	color: #fffbfb;
 	white-space: nowrap;
 	transition: 0.3s;
 }
@@ -239,6 +235,16 @@ section {
 	font-size: 14px;
 	border: 2px solid #47b2e4;
 	font-weight: 600;
+}
+
+.header-scrolled .navbar a,
+.header-scrolled .navbar a:focus {
+	color: #000;
+}
+
+.header-scrolled .navbar a.active,
+.header-scrolled .navbar a.active:focus {
+	color: #C69651;
 }
 
 .navbar .getstarted:hover,
@@ -318,7 +324,7 @@ section {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-	color: #fff;
+	color: #c69651;
 	font-size: 28px;
 	cursor: pointer;
 	display: none;
@@ -441,7 +447,7 @@ section {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.65);
+	/*	background-color: rgba(0, 0, 0, 0.65);*/
 	top: 0;
 	left: 0;
 }
@@ -806,7 +812,7 @@ textarea {
 }
 
 .overviewImgBoxWrapper .col-md-3:nth-child(even) {
-	transform: translateY(50px);
+	transform: translateY(45px);
 }
 
 /*************************************** gallerySlider ************************************/
