--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -460,7 +460,7 @@ section {
 	bottom: 0;
 	width: 100%;
 	height: 100vh;
-	object-fit: cover;
+	object-fit: fill;
 }
 
 /*************************************** footer ************************************/
