--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,7 +447,7 @@ section {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	/*	background-color: rgba(0, 0, 0, 0.65);*/
+	background-color: rgba(0, 0, 0, 0.09);
 	top: 0;
 	left: 0;
 }
